huge restruct., fixes and cleanup of the Model part of the code